完成评论展示的部分功能

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/header.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/header.html
@@ -27,8 +27,8 @@
                     </div>
                 </div><!-- .site-branding -->
                 <div style="float: right;max-width: 400px;margin-right: 10%;margin-top: 5%">
-                    <p >我不在意任何世俗的牵绊，我所希望的，就是能够，陪你走到生命的尽头！</p>
-                    <p style="padding-left: 20%;margin-top: -10px">--高渐离《秦时明月》</p>
+                    <p > <span th:text="${motto.content}"></span> </p>
+                    <p style="padding-left: 20%;margin-top: -10px">-- <span th:text="${motto.name}"></span></p>
                 </div>
 
             </div>
