--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/header.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/header.html
@@ -20,7 +20,7 @@
                     <h1 class="site-title">
                         <a href="/index/page/1" rel="home" style="color: white;"><span th:text="${userShow.nickName}"></span></a></h1>
                     <p class="site-description"><span th:text="${userShow.famousSays}"></span></p>
-                    <div style="color: white;padding-left: 1%">
+                    <div style="color: white;padding-left: 1%;width: 200px">
                         <a style="color: white;" href="/index/about" class="site-description" >关于 /</a>
                         <a style="color: white;" href="/index/archive" class="site-description">&nbsp;归档 /</a>
                         <a style="color: white;" href="#" class="site-description" >&nbsp;个人空间</a>
