--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/about.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/about.html
@@ -91,7 +91,7 @@
                         <input class="form-control"  placeholder="请输入您的邮箱"/>
                     </div>
                     <div class="reviewArea clearfix">
-                        <textarea cols="58" rows="5" class="content comment-input" placeholder="Please enter a comment&hellip;" onkeyup="keyUP(this)"></textarea>
+                        <textarea class="content comment-input" placeholder="Please enter a comment&hellip;" onkeyup="keyUP(this)"></textarea>
                         <span style="padding-left: 82%;font-size: 40px;margin-top: -16px;color:#5BC0DE;cursor: pointer;" class="face-icon"  >☺</span>
                         <a href="javascript:;" style="margin-top: 12px;" class="plBtn">评论</a>
                     </div>
