--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/archive.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/archive.html
@@ -8,6 +8,9 @@
     <link rel='stylesheet'  href='/placid/framework/Font-Awesome/css/font-awesome.min.css' type='text/css' />
     <link rel='stylesheet'  href='/placid/framework/bootstrap/css/bootstrap.css' type='text/css'/>
     <link rel='stylesheet'  href='/placid/css/style.css' type='text/css'/>
+
+    <link rel='stylesheet'  href='/css/code.css' type='text/css'/>
+
     <script src="/admin_/script/jquery-3.3.1.js" type="text/javascript"></script>
     <script type='text/javascript' src='/placid/framework/bootstrap/js/bootstrap.js'></script>
     <script type="text/javascript" src="/js/search.js"></script>
